message Track {
    required int32 ts = 1;
    required int32 id = 2;
    required string coord1 = 3;
    required string coord2 = 4;
    required int32 speed = 5;
    required int32 heading1 = 6;
    required int32 heading2 = 7;
    required int32 alt = 8;
    required int32 altSensor = 9;
    required int32 mode3 = 10;
    required int32 mode2 = 11;
    required string callsign = 12;
    required string dept = 13;
    required string dest = 14;
    optional string eta = 15;
    required string arctType = 16;
    required int32 attribKey = 17;
    required int32 force = 18;
    required string trackcolor = 19;
    required string tracksymbol = 20;
    required int32 rotate = 21;
    required string rings = 22;
    required bool moved = 23;
    optional bool coasting = 24;
    optional bool tfmdg = 25;
    optional bool lo = 26;
    optional bool po = 27;  
    optional string gf = 28;
    optional bool emergency = 29;
    optional bool blink = 30;
    optional string points = 31;
    optional string attribs = 32;
}
